# See more [package]keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "bluet"
version = "0.1.0"
edition = "2021"
authors = ["Patrik Vácal <patrik@vacal.dev>"]
description = "Bluetooth triggers made easy"
homepage = "https://github.com/gamecraftCZ/bluet"
repository = "https://github.com/gamecraftCZ/bluet"
readme = "README.md"
keywords = ["bluetooth", "linux"]


[[bin]]
# BlueT command line utility
name = "bluet"
path = "src/bluet.rs"
required-features = ["cmd"]

[[bin]]
# BlueT daemon service
name = "bluet-daemon"
path = "src/bluet_daemon.rs"
required-features = ["daemon"]


[dependencies]
log = "0.4.17"
libc = "0.2.139"
users = "0.11.0"
serde = "1.0.152"
toml = "0.5.10"
lazy_static = "1.4.0"

# CMD deps
env_logger = { version = "0.10.0", optional = true }

# Daemon deps
systemd-journal-logger = { version = "0.7.0", optional = true}
bluer = { version = "0.15.4", features = ["full"], optional = true }
futures = { version = "0.3.25", optional = true }
tokio = { version = "1.23.0", features = ["macros", "rt-multi-thread"], optional = true}
tokio-stream = { version = "0.1.11", optional = true }


[features]
cmd = ["env_logger"]
daemon = ["dep:bluer", "dep:tokio", "dep:tokio-stream", "dep:futures", "dep:systemd-journal-logger", "env_logger"]
